fixed whitespace issue with the post

--- a/src/partials/all.css
+++ b/src/partials/all.css
@@ -225,6 +225,7 @@ input[type=search] {
   width: 70%;
   padding-left: 20px;
   padding-right: 20px;
+    margin-top: -15px;
 }
  .view-container-all{
    display: inline-flex;
